# Machine-Learning-Assignments

1DClassifier/: homework_1d_classifier.ipynb
Clustering/: clustering.ipynb  pyproject.toml
Dimensionalityreduction/: dim_reduction_wine.ipynb
Perceptron/: perceptron_XOR.ipynb
assignment1/: pyproject.toml  readme.md
assignment2/: homework_2.ipynb
assignment3/: residualPlot.ipynb
assignment5/: pyproject.toml
assignment7/: decision_tree_induction.ipynb  pyproject.toml
assignment8/: pyproject.toml
assignment8/perceptron/: pyproject.toml
