[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["Nasrin Sultana Nipa <nasrin.sultanan@smail.astate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
