[tool.poetry]
name = "hw1"
version = "0.1.0"
description = "This assignment will show how to train a very simple 
model to discriminate between two classes in 1-dimantional space"
authors = ["Nasrin Sultana Nipa <nasrin.sultanan@smail.astate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "1.26.3"
matplotlib = "3.8.2"
ipykernel = "6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
